--- a/Diagnosis.Client.App/Controls/FormParts/DateOffsetPicker.xaml
+++ b/Diagnosis.Client.App/Controls/FormParts/DateOffsetPicker.xaml
@@ -49,7 +49,9 @@
                 </DataTemplate>
             </ComboBox.ItemTemplate>
         </ComboBox>
-        <TextBlock Margin="10 0" VerticalAlignment="Center">
+        <TextBlock Margin="10 0"
+                   FontSize="{StaticResource LabelFontSize}"
+                   VerticalAlignment="Center">
             <TextBlock.Style>
                 <Style TargetType="TextBlock">
                     <Setter Property="Text"
