--- a/Diagnosis.Client.App/Controls/Search/QueryBlock.xaml
+++ b/Diagnosis.Client.App/Controls/Search/QueryBlock.xaml
@@ -83,7 +83,7 @@
             </StackPanel>
         </DockPanel>
 
-        <StackPanel Visibility="{Binding IsGroup, Converter={StaticResource NegBooleanToVisibilityConverter}}"
+        <StackPanel Visibility="{Binding DescriptionVisible, Converter={con:BooleanToVisibilityConverter}}"
                     Grid.Row="1">
             <StackPanel.Resources>
                 <Style TargetType="TextBlock">
@@ -91,33 +91,38 @@
                             Value="{DynamicResource HelpFontSize}" />
                 </Style>
             </StackPanel.Resources>
-
+            <!--описание запроса, видно когда блок неактивен-->
             <StackPanel Visibility="{Binding DescriptionVisible, Converter={con:BooleanToVisibilityConverter}}">
-                <StackPanel Orientation="Horizontal"
-                            Visibility="{Binding AutocompleteAll.IsEmpty, Converter={StaticResource NegBooleanToVisibilityConverter}}">
-                    <TextBlock Text="всё из: " />
-                    <diag:CommaList ItemsSource="{Binding Options.WordsAll}" />
+                <StackPanel DataContext="{Binding Options}">
+                    <TextBlock Text="{Binding}" TextWrapping="Wrap" />
+                    <!--<StackPanel Orientation="Horizontal"
+                                Visibility="{Binding WordsAll.Count, Converter={StaticResource MoreThanToVisibility}}">
+                        <TextBlock Text="всё из: " />
+                        <diag:CommaList ItemsSource="{Binding WordsAll}" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal"
+                                Visibility="{Binding WordsAny.Count, Converter={StaticResource MoreThanToVisibility}}">
+                        <TextBlock>хотя бы <Run Text="{Binding AnyMin, Mode=OneWay}" /> <Run Text="из: " /></TextBlock>
+                        <diag:CommaList ItemsSource="{Binding WordsAny}" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal"
+                                Visibility="{Binding WordsNot.Count, Converter={StaticResource MoreThanToVisibility}}">
+                        <TextBlock Text="ни одного из: " />
+                        <diag:CommaList ItemsSource="{Binding WordsNot}" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal"
+                                Visibility="{Binding Categories.Count, Converter={StaticResource MoreThanToVisibility}}">
+                        <TextBlock Text="{Binding HrCategories, Source={StaticResource Resources}, Converter={StaticResource ToLower}, StringFormat='{}{0}: '}"></TextBlock>
+                        <diag:CommaList ItemsSource="{Binding Categories}" />
+                    </StackPanel>-->
                 </StackPanel>
-                <StackPanel Orientation="Horizontal"
-                            Visibility="{Binding AutocompleteAny.IsEmpty, Converter={StaticResource NegBooleanToVisibilityConverter}}">
-                    <TextBlock>хотя бы <Run Text="{Binding AnyMin, Mode=OneWay}" /> <Run Text="из: " /></TextBlock>
-                    <diag:CommaList ItemsSource="{Binding Options.WordsAny}" />
-                </StackPanel>
-                <StackPanel Orientation="Horizontal"
-                            Visibility="{Binding AutocompleteNot.IsEmpty, Converter={StaticResource NegBooleanToVisibilityConverter}}">
-                    <TextBlock Text="ни одного из: " />
-                    <diag:CommaList ItemsSource="{Binding Options.WordsNot}" />
-                </StackPanel>
-                <StackPanel Orientation="Horizontal"
-                            Visibility="{Binding SelectedCategories.Count, Converter={StaticResource MoreThanToVisibility}}">
-                    <TextBlock Text="{Binding HrCategories, Source={StaticResource Resources}, Converter={StaticResource ToLower}, StringFormat='{}{0}: '}"></TextBlock>
-                    <diag:CommaList ItemsSource="{Binding SelectedCategories}" />
-                </StackPanel>
-                <TextBlock Text="Не заданы условия поиска."
-                           Visibility="{Binding AllEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
-            </StackPanel>
-
-            <StackPanel Visibility="{Binding DescriptionVisible, Converter={con:BooleanToVisibilityConverter IsReversed=True}}"
+                    <TextBlock Text="Не заданы условия поиска."
+                               Visibility="{Binding AllEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
+        </StackPanel>
+        </StackPanel>
+        <StackPanel Visibility="{Binding IsGroup, Converter={StaticResource NegBooleanToVisibilityConverter}}"
+                        Grid.Row="2">
+                <StackPanel Visibility="{Binding DescriptionVisible, Converter={con:BooleanToVisibilityConverter IsReversed=True}}"
                         Grid.Row="2">
                 <Label Content="Всё из" />
                 <search:Autocomplete DataContext="{Binding AutocompleteAll}" />
