--- a/Diagnosis.Client.App/Screens/Search.xaml
+++ b/Diagnosis.Client.App/Screens/Search.xaml
@@ -51,8 +51,21 @@
         </Grid.RowDefinitions>
         <!--<TextBlock Style="{StaticResource ScreenTitle}"
                    Margin="5,0,0,0">Поиск</TextBlock>-->
-        <CheckBox IsChecked="{Binding UseOldMode}"
-                  Content="Старый поиск" />
+        <StackPanel Orientation="Vertical">
+            <StackPanel Orientation="Horizontal">
+                <Button Command="{Binding History.PrevOptionsCommand}">Prev</Button>
+                <Button Command="{Binding History.NextOptionsCommand}">Next</Button>
+                <Button Command="{Binding Loader.OpenBufferCommand}">OpenBuffer</Button>
+                <Button Command="{Binding Loader.LoadOptionsCommand}">Load</Button>
+                <Button Command="{Binding Loader.SaveOptionsCommand}">Save</Button>
+            </StackPanel>
+            <CheckBox IsChecked="{Binding UseOldMode}"
+                      Content="Старый поиск" />
+            <TextBox Text="{Binding Loader.Buffer}"
+                     Height="50"
+                     Visibility="{Binding Loader.ShowBuffer, Converter={con:BooleanToVisibilityConverter}}" />
+        </StackPanel>
+
         <Expander x:Name="searchControls"
                   Style="{StaticResource SplitExpanderStyle}"
                   MaxHeight="{Binding ActualHeight, ElementName=search, Converter={con:ExpressionConverter {}{0} * 8/10}}"
